actualizacion de la documentacion de api rest
